--- a/index.html
+++ b/index.html
@@ -146,11 +146,40 @@
         <button data-section="social">সামাজিক</button>
         <button data-section="personal">ব্যক্তিগত</button>
     </nav>
-
     <main id="content">
         <!-- কন্টেন্ট লোড হবে -->
     </main>
+<center>
+<a href="https://humayunshariarhimu.github.io/LoveSpectrum/love-wave.html" class="glow-btn">✨ Explore Love</a>
 
+<style>
+.glow-btn {
+  text-decoration: none;
+  color: #fff;
+  background: linear-gradient(90deg, #ff007f, #ff66b3, #ff007f);
+  padding: 12px 28px;
+  border-radius: 50px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  box-shadow: 0 0 15px #ff007f, 0 0 30px #ff66b3;
+  transition: all 0.3s ease;
+  animation: glowMove 3s linear infinite;
+  display: inline-block;
+}
+
+.glow-btn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 0 25px #ff3399, 0 0 45px #ff66b3;
+}
+
+@keyframes glowMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+</style>
+</center>
     <footer>
         <p>Love Spectrum । Humayun Shariar Himu</p>
     </footer>
